MODINVOICE-222 Ensure that Allowable Expenditure restrictions are based on "Total Funding" (#212)
* MODINVOICE-222 Ensure that Allowable Encumbrance and Allowable Expenditure restrictions are based on "Total Funding"